--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     align-self: flex-start;
   }
   
@@ -9,7 +9,7 @@ h1 {
   a {
     text-decoration: none;
     color: inherit;
-  }
+  } */
   .navbar {
     display: flex;
     align-items: center;
@@ -42,15 +42,15 @@ h1 {
     justify-content: center;
   }
   
-  .home {
+  /* .home {
     height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 75px;
-  }
+  } */
   
-  .home a {
+  /* .home a {
     width: 120px;
     aspect-ratio: 1;
     background-color: #faff00;
@@ -64,7 +64,7 @@ h1 {
   }
   .home a:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  }
+  } */
   
   .actions {
     display: flex;
