search box commit

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* h1 {
+/* /* /* h1 {
     align-self: flex-start;
   }
   
@@ -90,4 +90,4 @@
     cursor: not-allowed;
     box-shadow: none;
   }
-  
+   
