--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -14,3 +14,11 @@
   font-size: 20px;
   align-items: center;
 }
+
+.filter {
+  width:100px;
+  height:100px;
+  padding:10px;
+  margin:10px;
+  background-color: aqua;
+}
