--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -22,3 +22,24 @@
   margin:10px;
   background-color: aqua;
 }
+
+
+.menu-items {
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+}
+
+.menu-item {
+  background: #f4f4f4;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.menu-item img {
+  width: 100%;
+  height: 250px;
+  display: block;
+}
